--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-4-Linear-Relationship.html">Topic 4: Linear Relationship</a></p>
 </li>
+<li>
+<p><a href="Topic-5-Two-Way-Tables.html">Topic 5: Two-way Tables</a></p>
+</li>
 </ul>
 </div>
 <div class="include-after">
