--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-4-Linear-Relationship.html">Topic 4: Linear Relationship</a></p>
 </li>
-<li>
-<p><a href="Topic-5-Two-Way-Tables.html">Topic 5: Two-way Tables</a></p>
-</li>
+</ul>
+<!-- - [Topic 5: Two-way Tables](Topic-5-Two-Way-Tables.html) -->
+<ul>
+<li><a href="Topic-5-Probability.html">Topic 5: Introduction to Probability</a></li>
 </ul>
 </div>
 <div class="include-after">
