--- a/index.html
+++ b/index.html
@@ -96,10 +96,15 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-4-Linear-Relationship.html">Topic 4: Linear Relationship</a></p>
 </li>
-</ul>
-<!-- - [Topic 5: Two-way Tables](Topic-5-Two-Way-Tables.html) -->
-<ul>
-<li><a href="Topic-5-Probability.html">Topic 5: Introduction to Probability</a></li>
+<li>
+<p><a href="Topic-5-Probability.html">Topic 5: Introduction to Probability</a></p>
+</li>
+<li>
+<p><a href="Topic-6-Two-Way-Tables.html">Topic 6: Two-way Tables</a></p>
+</li>
+<li>
+<p><a href="Topic-7-Discrete-Random-Variables.html">Topic 7: Discrete Random Variables</a></p>
+</li>
 </ul>
 </div>
 <div class="include-after">
