--- a/index.html
+++ b/index.html
@@ -105,6 +105,27 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-7-Discrete-Random-Variables.html">Topic 7: Discrete Random Variables</a></p>
 </li>
+<li>
+<p><a href="Topic-8-Continuous-Random-Variables.html">Topic 8: Continuous Random Variables</a></p>
+</li>
+<li>
+<p><a href="Topic-9-Sampling-Distributions.html">Topic 9: Sampling Distribution</a></p>
+</li>
+<li>
+<p><a href="Topic-10-Confidence-Intervals-Mean.html">Topic 10: Confidence Interval for a Mean</a></p>
+</li>
+<li>
+<p><a href="Topic-11-Confidence-Intervals-Proportion.html">Topic 11: Confidence Interval for a Proportion</a></p>
+</li>
+<li>
+<p><a href="Topic-12-Concepts-of-Hypothesis-Testing.html">Topic 12: Concepts of Hypothesis Testing</a></p>
+</li>
+<li>
+<p><a href="Topic-13-Hypothesis-Testing-Mean-Proportion.html">Topic 13: Hypothesis Testing for a Mean or a Proportion</a></p>
+</li>
+<li>
+<p><a href="Topic-14-Confidence-Intervals-Median.html">(<strong>optional</strong>) Topic 14: Hypothesis Testing for a Median</a></p>
+</li>
 </ul>
 </div>
 <div class="include-after">
